--- a/web_01/index2.html
+++ b/web_01/index2.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PornHub</title>
+    <title>Vk</title>
 </head>
 <body>
-    <a href="http://pornub.com">BelarashPorn</a>
+    <a href="http://vk.com">BelarashVK</a>
 </body>
 </html>
